Refactor to use virtual threads